// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithStyles with all data renders correctly 1`] = `
<div>
  <WithStyles(Table)
    className="TableDefault-table-1"
  >
    <WithStyles(TableHead)>
      <WithStyles(TableRow)>
        <WithStyles(TableCell)
          className="TableDefault-head-4"
          key="1"
        >
          1
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="TableDefault-head-4"
          key="2"
        >
          2
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="TableDefault-head-4"
          key="3"
        >
          3
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
    </WithStyles(TableHead)>
    <WithStyles(TableBody)>
      <WithStyles(TableRow)
        className="TableDefault-row-2"
        key="0"
      >
        <WithStyles(TableCell)
          className="TableDefault-cell-3"
          key="00"
        >
          1
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
      <WithStyles(TableRow)
        className="TableDefault-row-2"
        key="1"
      >
        <WithStyles(TableCell)
          className="TableDefault-cell-3"
          key="10"
        >
          2
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
      <WithStyles(TableRow)
        className="TableDefault-row-2"
        key="2"
      >
        <WithStyles(TableCell)
          className="TableDefault-cell-3"
          key="20"
        >
          3
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
    </WithStyles(TableBody)>
  </WithStyles(Table)>
</div>
`;

exports[`WithStyles without data renders correctly 1`] = `
<div>
  <WithStyles(Table)
    className="TableDefault-table-1"
  >
    <WithStyles(TableHead)>
      <WithStyles(TableRow) />
    </WithStyles(TableHead)>
    <WithStyles(TableBody)>
      <WithStyles(TableRow)>
        <WithStyles(TableCell)
          colSpan={0}
        >
          Aucune donnée
        </WithStyles(TableCell)>
      </WithStyles(TableRow)>
    </WithStyles(TableBody)>
  </WithStyles(Table)>
</div>
`;
